Terraform/main.tf
data "aws_ami" "ubuntu" {
  most_recent = true

  owners = ["099720109477"]

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }
}

EC2:
resource "aws_instance" "fullstack" {

  ami           = data.aws_ami.ubuntu.id
  instance_type = var.instance_type

  key_name = var.key_name

  vpc_security_group_ids = [
    aws_security_group.fullstack_sg.id
  ]

  user_data = file("userdata.sh")

  tags = {
    Name = "fullstack-server"
  }
}
